package service

import (
	"context"
	pb "github.com/wastill/petclinic/api/petclinic"
)

func (s *PetClinicRestService) CreatePetType(ctx context.Context, req *pb.CreatePetTypeRequest) (*pb.CreatePetTypeReply, error) {
	return &pb.CreatePetTypeReply{}, nil
}
func (s *PetClinicRestService) UpdatePetType(ctx context.Context, req *pb.UpdatePetTypeRequest) (*pb.UpdatePetTypeReply, error) {
	return &pb.UpdatePetTypeReply{}, nil
}
func (s *PetClinicRestService) DeletePetType(ctx context.Context, req *pb.DeletePetTypeRequest) (*pb.DeletePetTypeReply, error) {
	return &pb.DeletePetTypeReply{}, nil
}
func (s *PetClinicRestService) GetPetType(ctx context.Context, req *pb.GetPetTypeRequest) (*pb.GetPetTypeReply, error) {
	return &pb.GetPetTypeReply{}, nil
}
func (s *PetClinicRestService) ListPetType(ctx context.Context, req *pb.ListPetTypeRequest) (*pb.ListPetTypeReply, error) {
	return &pb.ListPetTypeReply{}, nil
}
